--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     dplyr,
+    histdat (>= 0.1.0),
     jsonlite,
     magrittr,
     moments,
@@ -21,3 +22,5 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 RoxygenNote: 7.1.1
+Remotes:  
+    TMiguelT/histdat
