Fix tests, remove the load_multiqc_file function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,8 +19,9 @@ Imports:
     stringr,
     tibble
 Suggests: 
+    tidyr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 RoxygenNote: 7.1.1
-Remotes:  
+Remotes: 
     TMiguelT/histdat
