--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,19 @@
-Package: multiqc
+Package: TidyMultiqc
 Type: Package
 Title: R Parser for MultiQC
 Version: 0.1.0
 Author: Michael Milton
 Maintainer: Michael Milton <michael.r.milton@gmail.com>
 Description: Converts MultiQC reports into data formats suited to analysis in R
-License: GPLv3
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Imports: 
+    assertthat,
     dplyr,
-    histdat (>= 0.1.0),
+    HistDat (>= 0.2.0),
     jsonlite,
     magrittr,
-    moments,
     purrr,
     rlang,
     stringr,
@@ -23,5 +23,4 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 RoxygenNote: 7.1.1
-Remotes: 
-    TMiguelT/histdat
+Roxygen: list(markdown = TRUE)
