--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: TidyMultiqc
 Type: Package
 Title: Converts 'MultiQC' Reports into Tidy Data Frames
-Version: 0.1.0
+Version: 0.1.1
 Author: Michael Milton
 Maintainer: Michael Milton <michael.r.milton@gmail.com>
 Description: Provides the means to convert 'multiqc_data.json' files,
@@ -31,3 +31,5 @@ Config/testthat/edition: 3
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
+URL: https://github.com/multimeric/TidyMultiqc, https://cran.r-project.org/package=TidyMultiqc
+BugReports: https://github.com/multimeric/TidyMultiqc/issues
