--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(extract_histogram)
 export(extract_ignore_x)
 export(extract_xy)
+export(list_plots)
 export(load_multiqc)
 export(parse_plot_features)
 export(summary_extract_df)
