--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,8 @@ export(extract_ignore_x)
 export(extract_xy)
 export(list_plots)
 export(load_multiqc)
-export(parse_plot_features)
+export(plot_to_histogram)
 export(summary_extract_df)
 export(summary_q30)
+import(rlang)
 importFrom(magrittr,`%>%`)
