--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -4,11 +4,4 @@ reference:
     desc: The public API to this package
   - contents:
     - load_multiqc
-  - title: Plot Extractor Functions
-    desc: These functions can be used as arguments to `load_multiqc()` to specify how to extract data from MultiQC plots
-  - contents:
-      - starts_with("extract_")
-  - title: Summary Functions
-    desc: These are also passed as arguments to `load_multiqc()`. In most cases you can use normal summary statistics like `base::mean()`, but these are some other useful ones you might want.
-  - contents:
-    - starts_with("summary_")
+    - list_plots
