--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: TidyMultiqc
 Type: Package
 Title: Converts 'MultiQC' Reports into Tidy Data Frames
-Version: 0.1.1
+Version: 1.0.0
 Author: Michael Milton
 Maintainer: Michael Milton <michael.r.milton@gmail.com>
 Description: Provides the means to convert 'multiqc_data.json' files,
@@ -14,7 +14,6 @@ Encoding: UTF-8
 Imports: 
     assertthat,
     dplyr,
-    HistDat (>= 0.2.0),
     jsonlite,
     magrittr,
     purrr,
@@ -26,7 +25,8 @@ Suggests:
     testthat (>= 3.0.0),
     knitr,
     rmarkdown,
-    ggplot2
+    ggplot2,
+    HistDat
 Config/testthat/edition: 3
 RoxygenNote: 7.1.2
 Roxygen: list(markdown = TRUE)
